# Gradient-Based-Optimization-for-Network-Constraint-Sparse-PCA

./: .gitignore  .gitmessage  00_program_guide.md  01_problem_scope.md  02_paper1_rescue_memo.md  03_formulation.md  04_algorithm.md  05_baselines.md  ABLATION_TABLES.md  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT_CONVERGENCE.md  AUDIT_REPORT_METHOD.md  BOTTLENECK_ANALYSIS.md  CHANGELOG.md  CLAIM_AUDIT.md  CONTRIBUTING.md  EXPERIMENTS.md  FINAL_CERTIFICATION.md  GEMINI.md  IMPLEMENTATION_MAP.md  PAPER_REVIEW_CHECKLIST.md  PERFORMANCE_REPORT_V0.md  PERFORMANCE_REPORT_V1.md  README.md  REPRODUCIBILITY.md  SCIENTIFIC_REVIEW_WORKFLOW.md  main.py  pyproject.toml
.githooks/: pre-commit
conf/: config.yaml
configs/: chain_lambda2_sweep_seed0_0p00.yaml  chain_lambda2_sweep_seed0_0p05.yaml  chain_lambda2_sweep_seed0_0p10.yaml  chain_lambda2_sweep_seed0_0p20.yaml  chain_lambda2_sweep_seed0_0p50.yaml  chain_lambda2_sweep_seed1_0p00.yaml  chain_lambda2_sweep_seed1_0p05.yaml  chain_lambda2_sweep_seed1_0p10.yaml  chain_lambda2_sweep_seed1_0p20.yaml  chain_lambda2_sweep_seed1_0p50.yaml  chain_lambda2_sweep_seed2_0p00.yaml  chain_lambda2_sweep_seed2_0p05.yaml  chain_lambda2_sweep_seed2_0p10.yaml  chain_lambda2_sweep_seed2_0p20.yaml  chain_lambda2_sweep_seed2_0p50.yaml  graph_aligned_chain_seed0_0p00.yaml  graph_aligned_chain_seed0_0p05.yaml  graph_aligned_chain_seed0_0p10.yaml  graph_aligned_chain_seed0_0p20.yaml  graph_aligned_chain_seed0_0p50.yaml  graph_aligned_chain_seed1_0p00.yaml  graph_aligned_chain_seed1_0p05.yaml  graph_aligned_chain_seed1_0p10.yaml  graph_aligned_chain_seed1_0p20.yaml  graph_aligned_chain_seed1_0p50.yaml  graph_aligned_chain_seed2_0p00.yaml  graph_aligned_chain_seed2_0p05.yaml  graph_aligned_chain_seed2_0p10.yaml  graph_aligned_chain_seed2_0p20.yaml  graph_aligned_chain_seed2_0p50.yaml  grid_lambda2_sweep_seed0_0p00.yaml  grid_lambda2_sweep_seed0_0p05.yaml  grid_lambda2_sweep_seed0_0p10.yaml  grid_lambda2_sweep_seed0_0p20.yaml  grid_lambda2_sweep_seed0_0p50.yaml  grid_lambda2_sweep_seed1_0p00.yaml  grid_lambda2_sweep_seed1_0p05.yaml  grid_lambda2_sweep_seed1_0p10.yaml  grid_lambda2_sweep_seed1_0p20.yaml  grid_lambda2_sweep_seed1_0p50.yaml  (+53 more)
data/: pitprop.py
doc/: 00_intro.md  01_data.md  implementation_review.md  network_constrained_spca_guide.md
docs/: phase1.5-claim-hardening-realdata-changelog.md  phase2-changelog.md  trackB-brief.md  worktrees.md  (+1 more)
(+3517 files in other folders)
