[project]
name = "nc-spca"
version = "0.1.0"
description = "Gradient-Based Optimization for Network-Constrained Sparse PCA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "pyrefly>=0.50.0",
    "ty>=0.0.14",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "data*"]

[tool.pytest.ini_options]
pythonpath = ["."]